// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplePay desktop className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcApplePay YpcApplePay_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_apple-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcApplePay-Icon YpcApplePay-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Apple Pay
    </h4>
  </div>
</article>
`;

exports[`ApplePay desktop view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcApplePay YpcApplePay_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_apple-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcApplePay-Icon YpcApplePay-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Apple Pay
    </h4>
  </div>
</article>
`;

exports[`ApplePay desktop view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcApplePay YpcApplePay_view_vertical"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_apple-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcApplePay-Icon YpcApplePay-Icon_view_vertical"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Apple Pay
    </h4>
  </div>
</article>
`;

exports[`ApplePay touch-phone className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcApplePay YpcApplePay_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_apple-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcApplePay-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Apple Pay
    </h4>
  </div>
</article>
`;

exports[`ApplePay touch-phone view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcApplePay YpcApplePay_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_apple-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcApplePay-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Apple Pay
    </h4>
  </div>
</article>
`;

exports[`ApplePay touch-phone view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcApplePay YpcApplePay_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_apple-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcApplePay-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Apple Pay
    </h4>
  </div>
</article>
`;
